objects/MPLS_RVA_Data_Center_Site__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Items_to_Consider__c</fullName>
        <inlineHelpText>Example - customer has requested that Verizon be used as the LEC into their site.</inlineHelpText>
        <label>Additional Items to Consider</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Address__c</fullName>
        <label>Backup Circuit Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_City__c</fullName>
        <label>Backup Circuit City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Country__c</fullName>
        <label>Backup Circuit Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Postal_Code__c</fullName>
        <label>Backup Circuit Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_Province__c</fullName>
        <label>Backup Circuit Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Circuit_State__c</fullName>
        <label>Backup Circuit State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Circuit__c</fullName>
        <inlineHelpText>(*Backup circuits are provided with diverse PE and CE routers; if additional diversity is required this can be quoted upon request.)</inlineHelpText>
        <label>Backup Circuit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup with Diversity Options Below</fullName>
                </value>
                <value>
                    <fullName>No Backup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_NPA_NXX__c</fullName>
        <inlineHelpText>(Area code / Exchange, i.e. 317/715)</inlineHelpText>
        <label>Backup NPA/NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwidth_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bandwidth Calculation</label>
        <referenceTo>Bandwidth_Calculation__c</referenceTo>
        <relationshipName>MPLS_RVA_Data_Center_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bandwidth_Increments_Kbps__c</fullName>
        <label>Bandwidth Increments (Kbps)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>64</fullName>
                    <default>true</default>
                    <label>64</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CE_PE_Diversity__c</fullName>
        <formula>if(ispickval( Backup_Circuit__c , &quot;Backup with diversity options below&quot;),&quot;Yes&quot;,&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE/PE Diversity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Diversity__c</fullName>
        <inlineHelpText>2 circuits via different physical paths, delivered by the same carrier or LEC.</inlineHelpText>
        <label>CO Diversity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codec__c</fullName>
        <label>Codec</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G.711</fullName>
                </value>
                <value>
                    <fullName>G.729</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_QoS_COS_Markings_AF41_CS3__c</fullName>
        <formula>IF(Model__c= &apos;G.711&apos;,
    IF( TEXT(Bandwidth_Increments_Kbps__c) = &apos;64&apos;,
         Ceiling((Bandwidth_Calculation__r.Media_Server_5597_TCP_34_AF41_G_711__c + Bandwidth_Calculation__r.SIP_Signal_TCP_5060_24_CS3_G_711__c)*1000/64)*64/1000,
         Ceiling((Bandwidth_Calculation__r.Media_Server_5597_TCP_34_AF41_G_711__c + Bandwidth_Calculation__r.SIP_Signal_TCP_5060_24_CS3_G_711__c)*2)/2),
    IF( TEXT(Bandwidth_Increments_Kbps__c) = &apos;64&apos;,
         Ceiling((Bandwidth_Calculation__r.Media_Server_5597_TCP_34_AF41_G_729__c  + Bandwidth_Calculation__r.SIP_Signal_TCP_5060_24_CS3_G_729__c)*1000/64)*64/1000,
         Ceiling((Bandwidth_Calculation__r.Media_Server_5597_TCP_34_AF41_G_729__c  + Bandwidth_Calculation__r.SIP_Signal_TCP_5060_24_CS3_G_729__c)*2)/2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer QoS/COS Markings - AF41/CS3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_QoS_COS_Markings_BE__c</fullName>
        <formula>Total_Site_Bandwidth_Mbps_numeric__c -  Customer_QoS_COS_Markings_EF__c -  Customer_QoS_COS_Markings_AF41_CS3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer QoS/COS Markings - BE</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_QoS_COS_Markings_EF__c</fullName>
        <label>Customer QoS/COS Markings - EF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_QoS_COS_Markings_AF41_CS3__c</fullName>
        <formula>IF(
 Model__c  =&apos;G.711&apos;,
CEILING((Bandwidth_Calculation__r.Media_Server_5597_TCP_34_AF41_G_711__c + Bandwidth_Calculation__r.SIP_Signal_TCP_5060_24_CS3_G_711__c )*2)/2,
CEILING((Bandwidth_Calculation__r.Media_Server_5597_TCP_34_AF41_G_729__c + Bandwidth_Calculation__r.SIP_Signal_TCP_5060_24_CS3_G_729__c )*2)/2
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC QoS/COS Markings - AF41/CS3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_QoS_COS_Markings_BE__c</fullName>
        <formula>Total_Site_Bandwidth_Mbps_numeric__c -   DC_QoS_COS_Markings_EF__c - DC_QoS_COS_Markings_AF41_CS3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC QoS/COS Markings - BE</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_QoS_COS_Markings_EF__c</fullName>
        <label>DC QoS/COS Markings - EF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEC_Diversity__c</fullName>
        <inlineHelpText>2 circuits via different physical paths, delivered by separate carrier or LEC.</inlineHelpText>
        <label>LEC Diversity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Data_Center_Quote_Request__c</fullName>
        <label>Master Data Center Quote Request</label>
        <referenceTo>MPLS_RVA_Quote_Request__c</referenceTo>
        <relationshipName>MPLS_RVA_Data_Center_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Text( Bandwidth_Calculation__r.Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Entry_Points__c</fullName>
        <inlineHelpText>used with ANY diversity option (where available) physically separate entry points to the client premises - physical diversity at the site level.</inlineHelpText>
        <label>Multiple Entry Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Address__c</fullName>
        <label>Primary Circuit Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_City__c</fullName>
        <label>Primary Circuit City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Country__c</fullName>
        <label>Primary Circuit Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Postal_Code__c</fullName>
        <label>Primary Circuit Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_Province__c</fullName>
        <label>Primary Circuit Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Circuit_State__c</fullName>
        <label>Primary Circuit State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_NPA_NXX__c</fullName>
        <inlineHelpText>(Area code / Exchange, i.e. 317/715)</inlineHelpText>
        <label>Primary NPA/NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <formula>Master_Data_Center_Quote_Request__r.Quote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Site_Bandwidth_Mbps_numeric__c</fullName>
        <label>Total Site Bandwidth (Mbps)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MPLS / RVA Site</label>
    <nameField>
        <label>MPLS / RVA Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPLS / RVA Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CODiversityCantBeNull</fullName>
        <active>true</active>
        <description>CO Diversity must be yes or no</description>
        <errorConditionFormula>ISPickVal(CO_Diversity__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>CO_Diversity__c</errorDisplayField>
        <errorMessage>CO Diversity can&apos;t be null.  Please select Yes or No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LECDiversityCantBeNull</fullName>
        <active>true</active>
        <description>LEC Diversity must be yes or no</description>
        <errorConditionFormula>ISPickVal( LEC_Diversity__c ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>LEC_Diversity__c</errorDisplayField>
        <errorMessage>LEC Diversity can&apos;t be null.  Please select Yes or No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MultEntryPointsCantBeNull</fullName>
        <active>true</active>
        <description>Multiple Entry Points must be yes or no</description>
        <errorConditionFormula>ISPickVal(  Multiple_Entry_Points__c  ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Multiple_Entry_Points__c</errorDisplayField>
        <errorMessage>Multiple Entry Points can&apos;t be null.  Please select Yes or No.</errorMessage>
    </validationRules>
</CustomObject>